# speach-diarization-coursework

./: .gitignore  README.md  pyproject.toml
src/: config.py  main.py  model.py  service.py  utils.py
src/models/: diarizen_model.py  interface.py  pyannote_model.py
