[project]
name = "speach-diarization-cursework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diarize>=0.1.0",
    "ffmpeg>=1.4",
    "gradio>=6.14.0",
    "librosa>=0.11.0",
    "pyannote-audio>=4.0.4",
    "pyaudio>=0.2.14",
    "pydantic-settings>=2.14.0",
    "torchaudio>=2.11.0",
]
